--- a/Project/BH-F103.uvprojx
+++ b/Project/BH-F103.uvprojx
@@ -337,7 +337,7 @@
               <MiscControls></MiscControls>
               <Define>USE_STDPERIPH_DRIVER,STM32F10X_HD</Define>
               <Undefine></Undefine>
-              <IncludePath>..\Libraries\CMSIS;..\Libraries\STM32F10x_StdPeriph_Driver\inc;..\User</IncludePath>
+              <IncludePath>..\Libraries\CMSIS;..\Libraries\STM32F10x_StdPeriph_Driver\inc;..\User;..\User\delay;..\User\sys;..\User\usart</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
